force-app/main/default/objects/Krow__Task_Section_Junction__c/Krow__Task_Section_Junction__c.object-meta.xml
<CustomObject>
    <label>Klient Task Section Junction</label>
    <nameField>
        <displayFormat>TS-{0}</displayFormat>
        <label>Task Section Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klient Task Section Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>