force-app/main/default/objects/Krow__Task_Section_Junction__c/fields/Krow__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>