force-app/main/default/objects/Krow__Task_Section_Junction__c/fields/Krow__Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task__c</fullName>
    <label>Klient Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Klient Task Section Junctions</relationshipLabel>
    <relationshipName>Section_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>