force-app/main/default/objects/Krow__Task_Section_Junction__c/fields/Krow__Task_Section__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Section__c</fullName>
    <label>Klient Task Section</label>
    <referenceTo>Krow__Task_Section__c</referenceTo>
    <relationshipLabel>Klient Task Section Junctions</relationshipLabel>
    <relationshipName>Task_Section_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>