force-app/main/default/objects/Krow__Task_Section_Junction__c/fields/Krow__wbs__c.field-meta.xml
<CustomField>
    <fullName>Krow__wbs__c</fullName>
    <label>Work Breakdown Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>